--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,8 @@
 Host *
   ServerAliveInterval 600
   Compression yes
+
+Host github
+  HostName github.com
+  User git
+  IdentityFile /home/gabe/.ssh/id_rsa
